# tictactoe-kata-cpp

./: CMakeLists.txt  LICENSE  README.md
solution/src/: CMakeLists.txt  main_src_solution.cpp  tictactoe_solution.cpp  tictactoe_solution.hpp
solution/tests/: CMakeLists.txt  test_tictactoe_solution.cpp
src/: CMakeLists.txt  main_src.cpp  tictactoe.cpp  tictactoe.hpp
tests/: CMakeLists.txt  test_tictactoe.cpp
